Configure Gradle for multiple subprojects